# wryft-chat

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  FEATURE_AUDIT.md  LICENSE  README.md  RESET_DATABASE_GUIDE.md  SECURITY.md  START_BACKEND.sh  apply_username_migration.sh  docker-compose.yml  index.html  package.json  reset_database.sh  setup-minio.sh
.github/workflows/: ci.yml
admin-panel/: README.md  index.html  package.json
admin-panel/src/: App.css  App.jsx
backend/: .env.example  .env.production.example  Cargo.toml  README.md
backend/migrations/: 001_init.sql  002_dms_and_message_updates.sql
backend/src/: cache.rs  main.rs  permissions.rs  stats.rs  storage.rs
backend/src/handlers/: admin.rs  audit_logs.rs  auth.rs  badges.rs  channels.rs  dms.rs  emoji.rs  files.rs  friends.rs  guilds.rs  invites.rs  messages.rs  mod.rs  presence.rs  reactions.rs  roles.rs  typing.rs  uploads.rs  users.rs  voice.rs  webrtc.rs  websocket.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: mod.rs
docs/: README.md  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/api/: authentication.mdx  guilds.mdx  (+2 more)
homepage/: README.md  index-react.html  index.html  package.json  style.css
landing-site/: README.md  index.html  package.json
scripts/: backup.sh  deploy.sh  dev-setup.sh  grant-premium.js  revoke-premium.js  unverify-guild.js  verify-guild.js
src/: App.css  App.jsx
wryft-mobile/: package.json
wryft-web/: .env.production.example  README.md  index.html
wryft-web2/: .env.example  package.json  vite.config.js
(+172 files in other folders)
